# greg

./: .gitignore  AUTHORS  ChangeLog  GREG-VERSION  Makefile.am  NEWS  README  configure.ac
doc/: ChangeLog  Makefile.am  greg.1  greg.texi  gregtool.1  stamp-vti
src/: ChangeLog  Makefile.am  greg  greg.c  greg.scm  gregtool.in  libgreg.c
src/ice-9/: Makefile.am  greg.scm
test/: ChangeLog  Makefile.am  test.sh
test/basic/: begin.grg  greg.scm  shell.scm
test/tests/: greg.scm
