#
#  Makefile for Greg documentation.
#  
#  Copyright (C) 1998, 2001, 2003, 2005 Free Software Foundation, Inc.
#
#  Written by:	Richard Frith-Macdonald <rfm@gnu.org>
#  Modified by: Nicola Pero <n.pero@mi.flashnet.it>
#  Modified by: Maurizio Boriani <baux@member.fsf.org>
#
#  This file is part of the greg.
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Library General Public
#  License as published by the Free Software Foundation; either
#  version 2 of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
#  Library General Public License for more details.
#
#  You should have received a copy of the GNU Library General Public
#  License along with this library; if not, write to the Free
#  Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#


info_TEXINFOS=greg.texi
man1_MANS=greg.1


EXTRA_DIST = $(man1_MANS) $(info_TEXINFOS)



